# assistente_tintas_ia

./: README.md  docker-compose.yml  requirements.txt
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py  security.py
api/app/models/: embedding.py  tinta.py  usuario.py
api/app/routers/: auth.py  busca.py  chat.py  tintas.py  usuarios.py
api/app/schemas/: auth.py  tinta.py  usuario.py
api/app/services/ia/: embeddings.py  prompt.txt  recomendador-agente.py  recomendador_agente.py
api/tests/: conftest.py
api/tests/api/: test_auth.py  test_busca.py  test_tintas.py  test_usuarios.py
